--- a/modules/ROOT/content-nav.adoc
+++ b/modules/ROOT/content-nav.adoc
@@ -1,10 +1,7 @@
 * xref::index.adoc[]
 * xref::overview.adoc[Project overview]
 * xref::quickstart-connect.adoc[Quick Start]
-* xref::kafka-connect.adoc[{product-name}]
-** xref::kafka-connect/installation.adoc[Installation]
-** xref::kafka-connect/source.adoc[Source Configuration]
-** xref::kafka-connect/sink.adoc[Sink Configuration]
-** xref::kafka-connect/monitor-confluent.adoc[Monitor via Confluent Platform UI]
-** xref::kafka-connect/configuration.adoc[Configuration Summary]
+* xref::installation.adoc[Installation]
+* xref::source.adoc[Source Configuration]
+* xref::sink.adoc[Sink Configuration]
 * xref::confluent-cloud.adoc[Confluent Cloud Support]
