--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -5,7 +5,9 @@ The guide covers the following areas:
 
 * xref:overview.adoc[Project overview]
 * xref:quickstart-connect.adoc[Quick start with {product-name}]
-* xref:kafka-connect.adoc[How to install and configure {product-name}]
+* xref:installation.adoc[How to install {product-name}]
+* xref:source.adoc[How to configure the source component of {product-name}]
+* xref:sink.adoc[How to configure the sink component of {product-name}]
 
 (C) {copyright}
 License: link:{common-license-page-uri}[Creative Commons 4.0]
