update quickstart WIP

--- a/modules/ROOT/content-nav.adoc
+++ b/modules/ROOT/content-nav.adoc
@@ -1,7 +1,6 @@
 * xref::index.adoc[]
-* xref::overview.adoc[Project overview]
-* xref::quickstart-connect.adoc[Quick Start]
-* xref::installation.adoc[Installation]
+* xref::overview.adoc[Overview]
+* xref::quickstart.adoc[Quick Start]
 * xref::source.adoc[Source Configuration]
 * xref::sink.adoc[Sink Configuration]
 * xref::confluent-cloud.adoc[Confluent Cloud Support]
