--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -4,8 +4,7 @@
 The guide covers the following areas:
 
 * xref:overview.adoc[Project overview]
-* xref:quickstart-connect.adoc[Quick start with {product-name}]
-* xref:installation.adoc[How to install {product-name}]
+* xref:quickstart.adoc[Quick start with {product-name}]
 * xref:source.adoc[How to configure the source component of {product-name}]
 * xref:sink.adoc[How to configure the sink component of {product-name}]
 
