--- a/modules/ROOT/partials/notes.adoc
+++ b/modules/ROOT/partials/notes.adoc
@@ -1,6 +1,5 @@
 # tag::update[]
-[TIP]
-====
-The documentation on the deprecated Neo4j Streams plugin can be found link:/docs/kafka-streams[here].
-====
+
+[WARNING]
+{product-name} is provided as part of an Early Access Program, and can introduce breaking changes based on product feedback we receive, until General Availability.
 # end::update[]
